package ru.Shorthand.Enums;

public enum CoderErrors {
}
