package ru.Shorthand.Enums;

public enum ServiceStatus {
    ACTIVE, //Сервис активен и доступен
    FLUSH, //Очередь к сервису занята
    INACTIVE; //Сервис не активен
}
