package ru.Shorthand.Enums;

public enum TaskStatus {
    ACTIVE, //В процессе
    INQUEUE, //В очереди
    READY, //Готова
    FAULT, //Завершена с ошибкой
    NOTFOUND; //не существует
}
